--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "lodash": "^4.14.0",
     "vue": "^1.0.25",
     "vue-resource": "^1.2.0"
+  },
+  "dependencies": {
+    "faker": "^4.0.0"
   }
 }
