--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-vue": "^0.1.4",
+    "laravel-elixir-vueify": "^2.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.14.0",
     "vue": "^1.0.25",
     "vue-resource": "^1.2.0"
   },
   "dependencies": {
-    "faker": "^4.0.0"
+    "bootstrap": "^3.3.7",
+    "faker": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^2.1.4",
+    "jquery-ui": "^1.12.1",
+    "laravel-elixir-browserify-official": "^0.1.3",
+    "laravel-elixir-vueify": "^2.0.0"
   }
 }
