--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap3-wysihtml5-bower": "^0.3.3",
     "bootstrap3-wysihtml5-commonjs": "0.0.4",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "faker": "^4.0.0",
     "font-awesome": "^4.7.0",
     "html5shiv": "^3.7.3",
@@ -38,7 +39,7 @@
     "jvectormap-next": "^3.0.0",
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-vueify": "^2.0.0",
-    "moment": "^2.17.1",
+    "moment": "^2.18.1",
     "morris.js": "^0.5.0",
     "raphael": "^2.1.0",
     "respond.js": "^1.4.2"
